--- a/src/components/TreeFilter/VirtualizedTreeView.scss
+++ b/src/components/TreeFilter/VirtualizedTreeView.scss
@@ -41,7 +41,7 @@
             bottom: 5px;
 
             &.virtualized-tree-filter-footer-with-button {
-                bottom: 40px;
+                bottom: 15px;
             }
         }
 
